<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A3Test_Greenhouse</string>
    <string name="action_settings">Settings</string>
    <string name="system_messages">Messaggi di sistema</string>
    <string name="mex_out">Messaggi da spedire</string>
    <string name="connect">C/D</string>
    <string name="disconnect">D</string>
    <string name="send">I</string>
    <string name="subscribe50">S50</string>
    <string name="subscribe51">S51</string>
    <string name="send50">I50</string>
    <string name="send51">I51</string>
    <string name="start_actuator">Actuator</string>
    <string name="start_sensor">Sensor</string>
    <string name="start_server">Server</string>
    <string name="stop_experiment">Stop Experiment</string>
    <string name="group_id">Group ID</string>
    <string name="s_frequency">S. Frequency</string>
    <string name="a_frequency">A. Frequency</string>
    <string name="s_payload">S. Payload</string>
    <string name="a_payload">A. Payload</string>
    <string name="create_group">Create Group</string>
    <string name="start_experiment">Start Experiment</string>
    <string name="mes_s">(Mes/min)</string>
    <string name="bytes">(Bytes)</string>

</resources>
