<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experiment" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"            
            android:inputType="number"
            android:text="1"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createGroup"
            android:text="@string/create_group" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        style="@android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_sensor"
            android:onClick="startSensor" 
            style="@android:attr/buttonBarButtonStyle" />
        
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_actuator"
            android:onClick="startActuator" 
            style="@android:attr/buttonBarButtonStyle" />
        
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_server"
            android:onClick="startServer" 
            style="@android:attr/buttonBarButtonStyle" />
       </LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        style="@android:attr/buttonBarStyle">
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startExperiment"
            android:text="@string/start_experiment" 
            style="@android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopExperiment"
            android:text="@string/stop_experiment" 
            style="@android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <EditText
        android:id="@+id/oneInEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="none" >
        <requestFocus />
    </EditText>

</LinearLayout>